gobmkida/c0/load_and_analyze_sgf_file
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/load_and_analyze_sgf_file/src/interface/play_solo.c:623:12: error: use of undeclared identifier 'QueuePage'
move_val = QueuePage::QueuePage( &i, &j, next); 
           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/load_and_analyze_sgf_file/src/obj/2/play_solo.o] Error 1
